--- a/index.html
+++ b/index.html
@@ -10,18 +10,14 @@
 
     <h1>My shopping list</h1>
 
-    <div>
-      <label for="item">Enter a new item:</label>
-      <input type="text" name="item" id="item">
-      <button>Add item</button>
-    </div>
+    <label for="item">Enter a new Item:</label>
+    <input type="text" name="item" id="item">
+    <button>Add item</button>
 
     <ul>
 
     </ul>
 
-    <script src="./assets/shopping.js">
-
-    </script>
+    <script src="./assets/shopping.js"></script>
   </body>
 </html>
